@@ -1,0 +1,14 @@
+---
+permalink: update-storage-system.html
+sidebar: sidebar
+keywords: update ontap storage system
+summary: Update your ONTAP storage system to take advantage of the new and enhanced features.
+---
+= Complete ONTAP storage system update
+:icons: font    
+:imagesdir: ../media/
+
+[.lead]
+
+
+
