@@ -10,5 +10,14 @@ summary: View the answers to the frequently asked questions about ONTAP update.
 
 [.lead]
 
+This FAQ can help if you're just looking for a quick answer to a question.
 
+== Access to BlueXP operational resiliency
 
+*What's the BlueXP software updates URL?*
+For the URL, in a browser, enter: https://console.bluexp.netapp.com/
+
+== Licensing
+
+*Do you need a license to use BlueXP software updates?*
+A NetApp License File (NLF) is not required. 
